tests/NormalTests/paczka1/small_fuzzy/13539622.err
Error in line 4: xT1 S967 69,9
Error in line 5: xT1 S62 52,6
Error in line 14: S967 A865 76,1
